Add a banner to solicit help

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
 
   <body>
     <header class="site-header">
+      <banner><a href="//github.com/mehulkar/github-hall-of-fame" target="_blank">Help make this website better or submit entries!</a></banner>
       <div class="wrapper">
         <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
         <nav class="site-nav">
